correction collapse title et final

--- a/kasa/src/components/Collapse/Collapse.css
+++ b/kasa/src/components/Collapse/Collapse.css
@@ -53,8 +53,12 @@
 
 /* MOBILE */
 
-@media (max-width: 768px) {
+@media (min-width: 375px) and (max-width: 768px) {
     .collapse_content {
         height: 29.93px;
+    }
+
+    .collapse_titre {
+        font-size: 13px;
     }
 }
